results/classifier/118/none/1878627
device: 0.796
files: 0.713
graphic: 0.671
socket: 0.652
ppc: 0.644
vnc: 0.642
user-level: 0.641
PID: 0.618
performance: 0.608
network: 0.601
semantic: 0.599
register: 0.566
mistranslation: 0.565
risc-v: 0.535
VMM: 0.514
TCG: 0.511
architecture: 0.502
permissions: 0.495
arm: 0.487
peripherals: 0.475
kernel: 0.436
debug: 0.374
boot: 0.351
i386: 0.332
virtual: 0.295
x86: 0.277
KVM: 0.240
hypervisor: 0.223
assembly: 0.123

audio/mixeng build failure using Clang 10

When building with Clang 10 on Fedora 32, we get:

    CC      audio/mixeng.o
  audio/mixeng.c:274:34: error: implicit conversion from 'unsigned int' to 'float' changes value from 4294967295 to 4294967296 [-Werror,-Wimplicit-int-float-conversion]
  static const float float_scale = UINT_MAX / 2.f;
                                   ^~~~~~~~ ~
  /usr/lib64/clang/10.0.0/include/limits.h:56:37: note: expanded from macro 'UINT_MAX'
  #define UINT_MAX  (__INT_MAX__  *2U +1U)
                     ~~~~~~~~~~~~~~~~~^~~

Discussion about fixing:

https://<email address hidden>/msg699807.html

Patch posted:
https://<email address hidden>/msg706322.html

Merged in commit 9c61fcc89a70256c19047d251aa44f666f06089c.

